--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@babel/preset-react": "^7.18.6",
     "babel-loader": "^8.2.5",
     "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
+    "path": "^0.12.7",
     "pg": "^8.7.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -39,6 +41,7 @@
     "redux-thunk": "^2.4.1",
     "sequelize": "^6.21.3",
     "supertest": "^6.2.4",
+    "volleyball": "^1.5.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
   },
