--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test": "mocha spec.js",
     "test:dev": "QUIET=true JWT=shh DATABASE_URL=postgres://localhost/acme_db_test npm test -- --watch",
     "start:dev": "JWT=shhh nodemon server --ignore src/ --ignore dist/ & npm run build:dev",
-    "start": "JWT=shhh npm run build & react-scripts start"
+    "start": "JWT=shhh npm run build && node server/app.js"
   },
   "keywords": [],
   "author": "",
