--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build:dev": "npm run build -- --watch --mode=development",
     "test:dev": "QUIET=true JWT=shh DATABASE_URL=postgres://localhost/acme_db_test npm test -- --watch",
     "start:dev": "JWT=shhh nodemon server --ignore src/ --ignore dist/ & npm run build:dev",
-    "start": "JWT=shhh node server/app.js"
+    "start": "JWT=shhh node server/index.js"
   },
   "keywords": [],
   "author": "",
