development: scripts condensed. can now compile less, build webpack, and run the app using npm start

--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "build": "webpack",
+    "build": "lessc public/src/style.less public/style/style.css ; webpack",
     "build:dev": "npm run build -- --watch --mode=development",
     "test:dev": "QUIET=true JWT=shh DATABASE_URL=postgres://localhost/acme_db_test npm test -- --watch",
     "start:dev": "JWT=shhh nodemon server --ignore src/ --ignore dist/ & npm run build:dev & nodemon server/app.js",
-    "start": "JWT=shhh node server/app.js",
+    "start": "JWT=shhh npm run build ; node server/app.js",
     "seed": "node server"
   },
   "keywords": [],
