--- a/package.json
+++ b/package.json
@@ -13,7 +13,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/cli": "^7.18.10",
+    "@babel/core": "^7.18.10",
+    "@babel/polyfill": "^7.12.1",
+    "@babel/preset-env": "^7.19.1",
+    "@babel/preset-react": "^7.18.6",
     "@reduxjs/toolkit": "^1.8.5",
+    "babel-loader": "^8.2.5",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "express": "^4.18.1",
@@ -22,7 +28,7 @@
     "pg": "^8.7.3",
     "react": "^18.2.0",
     "react-redux": "^8.0.2",
-    "react-router-dom": "^5.3.3",
+    "react-router-dom": "^6.4.1",
     "react-scripts": "^5.0.1",
     "redux": "^4.2.0",
     "redux-logger": "^3.0.6",
@@ -31,13 +37,7 @@
     "supertest": "^6.2.4",
     "volleyball": "^1.5.1",
     "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0",
-    "@babel/cli": "^7.18.10",
-    "@babel/core": "^7.18.10",
-    "@babel/polyfill": "^7.12.1",
-    "@babel/preset-env": "^7.19.1",
-    "@babel/preset-react": "^7.18.6",
-    "babel-loader": "^8.2.5"
+    "webpack-cli": "^4.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.18.10",
@@ -51,7 +51,6 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
-    "react-router-dom": "^5.3.3",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
     "supertest": "^6.2.4",
