--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jsonwebtoken": "^8.5.1",
     "path": "^0.12.7",
     "pg": "^8.7.3",
+    "pokemontcgsdk": "^2.0.0",
     "react": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.4.1",
