--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "build": "lessc public/src/style.less public/style/style.css ; webpack",
     "build:dev": "npm run build -- --watch --mode=development",
     "test:dev": "QUIET=true JWT=shh DATABASE_URL=postgres://localhost/pokemon_db npm test -- --watch",
-    "start:dev": "JWT=shhh nodemon server --ignore src/ --ignore dist/ & npm run build:dev & nodemon server/app.js",
-    "start": "JWT=shhh npm-run-all build ; nodemon server/app.js",
+    "start:dev": "JWT=shhh npm-run-all build ; nodemon server/app.js",
+    "start": "JWT=shhh npm-run-all build ; nodemon server",
     "seed": "node server"
   },
   "keywords": [],
