--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.27.2",
     "@babel/cli": "^7.18.10",
     "@babel/core": "^7.18.10",
     "@babel/polyfill": "^7.12.1",
