deployment: configs and package.json updated

--- a/postgresql.conf
+++ b/postgresql.conf
@@ -1,1 +1,8 @@
-sslmode=require;
+options: { 
+  dialect: "postgres",
+  native: true, # adding this maybe breaks on hobby dyno
+  ssl: true, 
+  dialectOptions: {
+    ssl: true
+  }
+}
