cleanup: less-watch-compiler added

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "build": "lessc public/src/style.less public/style/style.css ; webpack",
+    "build": "less-watch-compiler public/src public/style ; webpack",
     "build:dev": "npm run build -- --watch --mode=development",
     "test:dev": "QUIET=true JWT=shh DATABASE_URL=postgres://localhost/pokemon_db npm test -- --watch",
     "start": "JWT=shhh npm run build -- --watch & nodemon server/index.js",
@@ -24,7 +24,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
-    "npm-run-all": "^4.1.5",
+    "less-watch-compiler": "^1.16.3",
     "path": "^0.12.7",
     "pg": "^8.7.3",
     "pokemontcgsdk": "^2.0.0",
