--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "build": "less-watch-compiler public/src public/style ; webpack",
+    "build": "less-watch-compiler public/src public/style & webpack",
     "build:dev": "npm run build -- --watch --mode=development",
     "test:dev": "QUIET=true JWT=shh DATABASE_URL=postgres://localhost/pokemon_db npm test -- --watch",
     "start": "JWT=shhh npm run build -- --watch & nodemon server/index.js",
