--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "build": "less-watch-compiler public/src public/style ; webpack",
+    "build": "less-watch-compiler public/src public/style & webpack",
     "build:dev": "npm run build -- --watch --mode=development",
     "test:dev": "QUIET=true JWT=shh DATABASE_URL=postgres://localhost/pokemon_db npm test -- --watch",
-    "start": "JWT=shhh npm run build -- --watch & nodemon server/index.js",
+    "start": "JWT=shhh node server/app.js",
     "seed": "node server/seed.js"
   },
   "keywords": [],
@@ -21,6 +21,7 @@
     "@reduxjs/toolkit": "^1.8.5",
     "babel-loader": "^8.2.5",
     "bcrypt": "^5.0.1",
+    "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
