--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "pg": "^8.7.3",
     "pokemontcgsdk": "^2.0.0",
     "react": "^18.2.0",
+    "react-js-pagination": "^3.0.3",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.4.1",
     "react-scripts": "^5.0.1",
