--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "build": "less-watch-compiler public/src public/style & webpack",
-    "build:dev": "npm run build -- --watch --mode=development",
-    "test:dev": "QUIET=true JWT=shh DATABASE_URL=postgres://localhost/pokemon_db npm test -- --watch",
-    "start": "JWT=shhh npm run build -- --watch & nodemon server/index.js",
+    "build:dev": "less-watch-compiler public/src public/style & webpack",
+    "build": "lessc public/src/style.less public/style/style.css & webpack",
+    "start": "JWT=shhh npm run build:dev & nodemon server/index.js",
+    "start:dev": "JWT=shhh npm run build:dev -- --watch & nodemon server/index.js",
     "seed": "node server/seed.js"
   },
   "keywords": [],
