--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "build:dev": "less-watch-compiler public/src public/style & webpack",
     "build": "lessc public/src/style.less public/style/style.css & webpack",
-    "start": "JWT=shhh npm run build:dev & nodemon server/index.js",
-    "start:dev": "JWT=shhh npm run build:dev -- --watch & nodemon server/index.js",
+    "start": "JWT=shhh npm run build:dev -- --watch & nodemon server/index.js",
     "seed": "node server/seed.js"
   },
   "keywords": [],
