--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "redux-thunk": "^2.4.1",
     "sequelize": "^6.21.3",
     "supertest": "^6.2.4",
+    "url-loader": "^4.1.1",
     "volleyball": "^1.5.1",
     "webpack-cli": "^4.10.0"
   },
@@ -49,6 +50,7 @@
     "@babel/preset-react": "^7.18.6",
     "babel-loader": "^8.2.5",
     "chai": "^4.3.6",
+    "file-loader": "^6.2.0",
     "mocha": "^10.0.0",
     "nodemon": "^2.0.20",
     "react": "^18.2.0",
